Fix for audit issue 126 - RoSH table spills out of container

--- a/assets/sass/_design-system-overrides.scss
+++ b/assets/sass/_design-system-overrides.scss
@@ -41,3 +41,7 @@
 .moj-task-list__item {
   @include govuk-font($size: 19);
 }
+
+.moj-scrollable-pane {
+  position: relative;
+}
